# Programmation_haute_performance

TDDataSubset/: CMakeLists.txt  proj1.cpp
canevasTD1/: CMakeLists.txt  README.txt  proj1.cpp
canevasTD2/: README.txt  config.h.in  proj1.cpp
canevasTD6OutOfCore/: helpers.cpp  proj.cpp
canevasTD8/__MACOSX/: ._canevasTD5
canevasTD8/__MACOSX/canevasTD5/: ._proj.cpp
canevasTD8/canevasTD5/: CMakeLists.txt  Readme.txt  exo-vtk-include.h  proj.cpp
canevasTDPseudoVR/: CMakeLists.txt  exo-vtk-include.h  proj1.cpp
canevasTP4PseudoVROffScreen/: proj.cpp
canevasTP4PseudoVRinteractif/: README.txt  proj.cpp
